[package]
name = "data-structures-rust"
author = "Ricardo Arias (reariast128@proton.me)"
version = "0.1.0"
edition = "2021"

[profile.bench]
opt-level = 0
debug = true

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8"

[[bench]]
name = "my_benchmark"
path = "src/benches/my_benchmark.rs"
harness = false

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
serde = {version = "1.0.210", features = ["derive"]}